# bassie

./: .gitignore  .gitmodules  README.md
cad/: bassie.SLDASM  foot.SLDPRT  hip_joint.SLDPRT  lower_leg.SLDPRT  upper_leg.SLDPRT
cad/actuator_design_1/: actuator.SLDASM  axle_1.SLDPRT  axle_2.SLDPRT  baseplate.SLDPRT  dc_motor_PEL00883.SLDPRT  gear_1.SLDPRT  gear_2.SLDPRT  pot_connector.SLDPRT
cad/actuator_design_1/extra/: Potentiometer.SLDPRT  Pulley_GT2_generator.SLDPRT
cad/actuator_design_1/stl/: Part7^actuator.STL  baseplate.STL  gear_1.STL  pot_connector.STL
cad/pelvis/: pelvis.SLDASM  pelvis_frame.SLDPRT  ~$pelvis_frame.SLDPRT
cad/urdf/: convert_solidworks_export.sh  isaac_gym_viewer.py  mujoco_viewer.py
cad/urdf/bassie.SLDASM/: CMakeLists.txt  package.xml
cad/urdf/bassie.SLDASM/config/: joint_names_bassie.SLDASM.yaml
cad/urdf/bassie.SLDASM/meshes/: left_foot.STL  left_hip_roll.STL  left_hip_yaw.STL  right_hip_roll.STL  right_hip_yaw.STL
cad/urdf/bassie.SLDASM/urdf/: base_link.STL  bassie.SLDASM.csv  bassie.SLDASM.urdf  left_hip_pitch.STL  left_knee.STL  right_foot.STL  viewer.py
cad/urdf/bassie.SLDASM/urdf/bassie.SLDASM/: bassie.SLDASM.usd
cad/urdf/bassie_urdf/: bassie.urdf
cad/urdf/bassie_urdf/meshes/: bassie.xml  left_ankle.STL  left_hip_b.STL  left_hip_pitch.STL  left_hip_roll.STL  left_hip_yaw.STL  left_knee.STL  left_lower_leg.STL  right_hip_b.STL  right_knee.STL
cad/urdf/sld_export/bassie.SLDASM/launch/: display.launch  (+1 more)
os/: motor_control_test.py  policy.py  sensors.cpp  test_uart.py
os/motor_controller/: motor_controller.ino
(+7 files in other folders)
